Hotfix-緩存管理器的鎖管理異常
修復:
 - 修復在刪除多個資料夾或移動檔案時緩存不會被更新的錯誤

新增:
 - 緩存管理器加入使用延遲雙刪的刪除方式確保在併發狀態下緩存狀正確

修改:
 - RedisProvider 現在所有的刪除方式都會回傳刪除狀態(單個為Boolean，批量刪除為刪除數量Long)

優化:
 - CacheManager 的鎖管理方式進行調整，不再使用doFinally避免鎖遺失的錯誤，改使用useWhen對生命週期進行管理